--- a/index.phtml
+++ b/index.phtml
@@ -19,7 +19,7 @@
       urlyt=inputurlyt.value;
       //inputurlyt.value="";
       divform.style.display="non";
-      iframeyt.src="https://server.presta42.com/YT.php?url="+urlyt;
+      iframeyt.src="YT.php?url="+urlyt;
       diviframe.style.display="block";
       }
     function addurlyoutubetermine()
